# org-social-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: cli.rs  config.rs  editor.rs  formatting.rs  main.rs
src/tui/: activatable.rs  app.rs  events.rs  mod.rs  modes.rs  navigation.rs
src/tui/ui/: content.rs  help.rs  main.rs  mod.rs  new_post.rs  poll_vote.rs  post_list.rs  reply.rs  status.rs  text_input.rs
