[package]
name = "org-social-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
org-social-lib-rs = { git = "https://github.com/AdsanTheGreat/org-social-lib-rs" }
chrono = "0.4.41"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
colored = "3.0.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
