[package]
name = "org-social-rs"
version = "0.1.1"
edition = "2021"
authors = ["Adsan <me@adsan.dev>"]
description = "A Rust-based CLI and TUI client for the Org-social decentralized social network"
readme = "README.md"
homepage = "https://github.com/AdsanTheGreat/org-social-rs"
repository = "https://github.com/AdsanTheGreat/org-social-rs"
license = "GPL-3.0"
keywords = ["cli", "tui", "social", "org-mode", "decentralized"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
org-social-lib-rs = { git = "https://github.com/AdsanTheGreat/org-social-lib-rs" }
chrono = "0.4.41"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
colored = "3.0.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
